# DGFEM-Acoustic

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  README.md  build.sh  data.msh  linux-macos.sh  mingw64.cmd  normal.pos  run_caa
dev/: mingw64.cmd  run.sh
doc/1d/: line.geo  line.msh  test.geo  test.msh  testOrder.msh
doc/2d/: 2DMacro.geo  2DParam.pro  2DSound.geo  2DSound.msh  Irregular.geo  Irregular.msh  Jacobian.geo  Jacobian.msh  Plate.geo  Plate.msh  Rectangle2.msh  Urban.geo  Urban.step  big.geo  big.msh  bigBC.msh  bigBCOrder.geo  bigBCOrder.msh  bigBCRefined.msh  bigDirichelet.geo  bigDirichelet.msh  bigOrder.msh  bigOrder2.msh  bigRefined.msh  circle.geo  circle.msh  curved.geo  debug.geo  debug.msh  disk.geo  disk.msh  rectangle.geo  rectangle.msh  rectangleFew.msh  rectangleOrder.msh  reflection.geo  reflection.msh  reflection2.geo  reflection2.msh  room.geo  (+11 more)
doc/3d/: 3DSound.geo  3DSound.msh  auditorium.geo  cube.geo  cube.msh  cubeOrder1.msh  debug.geo  debug.msh  sphere.geo  sphere.msh
doc/config/: Amphi_Pulse_3D.conf  Cube.conf  Room_2D.conf  (+4 more)
envs/: codeblocks.cmd  linux-macos.sh  mingw64.cmd  msvc.cmd
include/: Element.h  Face.h  Mesh.h  configParser.h  gmshUtils.h  logger.h  mass.h  solver.h  utils.h
mesh/: Plate.geo  Plate_big.msh  Plate_complex.msh  Plate_holes.msh  Plate_medium.msh  Plate_simple.msh
src/: CMakeLists.txt  Element.cpp  Face.cpp  Mesh.cpp  configParser.cpp  dgalerkin.cpp  gmshUtils.cpp  mass.cpp  solver.cpp  testUnit.cpp  utils.cpp
srcs/: CMakeLists.txt  edges.cpp  element.cpp  element.h  explore.cpp  main.cpp
